<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_login"
        layout="@layout/toolbar_backblack_whitebg"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_login"
        android:paddingBottom="30dp"
        android:paddingStart="30dp"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/heading_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin_bold"
            android:text="@string/txt_heading_login"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/heading2_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin_semibold"
            android:text="@string/txt_heading2_login"
            android:textSize="15sp"
            android:layout_below="@id/heading_login"/>

        <ImageView
            android:id="@+id/image_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading2_login"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:src="@drawable/girl_cat_pat"
            android:layout_centerHorizontal="true"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/image_login">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/input_email_login"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <android.widget.Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="12dp"
            android:height="44dp"
            android:background="@drawable/rounded_bg_button_primary"
            android:elevation="6dp"
            android:fontFamily="@font/cabin_semibold_italic"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_below="@id/input_password_login"/>

        <TextView
            android:id="@+id/txt_belum_punya_akun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin_semibold"
            android:gravity="center_horizontal"
            android:text="@string/belum_punya_akun"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_below="@id/btn_login" />

        <TextView
            android:id="@+id/txt_daftar_disini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:fontFamily="@font/cabin_semibold"
            android:text="@string/daftar_disini"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_below="@id/btn_login"
            android:layout_toRightOf="@id/txt_belum_punya_akun"/>
    </RelativeLayout>
</RelativeLayout>